--- a/app/views/admin/talents/index.html.erb
+++ b/app/views/admin/talents/index.html.erb
@@ -1,14 +1,19 @@
-<h1> <center> Coucou c'est le dashboard admin </center> </h1>
+<%= render 'layouts/back_link' %> 
+<div class="container">
+  <h3 class="text-primary text-center p-3 m-2"> Dashboard administrateur</h1>
+  <div class="card card-custom2 shadow p-4 m-5 w-50 mx-auto">
+    <h4 class="pb-2 mb-4"> Actuellement il y a : </h4>
+    <p> <strong class="text-primary">  <%= @users.count%></strong class="text-primary"> utilisateurs inscrits sur notre site !</p>
+    <p>  <strong class="text-primary"> <%= @appointments.count%></strong class="text-primary"> RDV pris entre mentors et apprentis! </p>
+    <p>  <strong class="text-primary"> <%= @talents.count%></strong class="text-primary"> talents proposés par des mentors! </p>
+    <p>  <strong class="text-primary"> <%= @categories.count%></strong class="text-primary"> catégories différentes! </p>
+  </div>
 
-<h4> Actuellement il y a : </h4>
-<h4> <strong> <font color="green"> <%= @users.count%> </font> </strong> utilisateurs inscrits sur notre site !</h4>
-<h4>  <strong> <font color="green"> <%= @appointments.count%> </font></strong> RDV pris entre mentors et apprentis! </h4>
-<h4>  <strong> <font color="green"> <%= @talents.count%> </font></strong> talents proposés par des mentors! </h4>
-<h4>  <strong> <font color="green"> <%= @categories.count%> </font></strong> catégories différentes! </h4>
-<br>
-
-<h4> <u> Ici la liste des categories : </u></h4>
-<% @categories.each do |category| %>
-<h4> <%= category.title%>  <%= link_to "Supprimer", admin_category_path(id: category.id), method: "delete", remote: true, class: "btn btn-outline-danger mt-3 mb-4 mx-auto" %> </h4>
-<br>
-<% end%>
+  <div class="card card-custom2 shadow p-4 m-5 w-50 mx-auto">
+    <h4 class="pb-2 mb-4"> <u> Liste des categories : </u></h4>
+    <% @categories.each do |category| %>
+    <p> <%= category.title%>
+    <%= link_to "Supprimer", admin_category_path(id: category.id), method: "delete", remote: true, class: "btn btn-outline-danger btn-sm m-2  float-right" %> </p>
+    <% end%>
+  </div>
+</div>
