--- a/app/views/static_pages/kit_ui.html.erb
+++ b/app/views/static_pages/kit_ui.html.erb
@@ -348,6 +348,35 @@
       </div>
     </div>
 
+      <!-- custom-card-3>-->
+      <div class="container">
+        <div class="card card-custom3 shadow">
+          <div class="row">
+            <div class="col">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class=" img card-img p-4" alt="...">
+            </div>
+            <div class="col">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/08/e7/2c/fe/inage-ocean-park.jpg" class=" img card-img p-4" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--card quote -->
+      <div class="card">
+        <h5>Julia - Mentor chez Talent Connect</h5>
+          <blockquote class="blockquote">
+            <p>Cela fait maintenant plusieurs années que je suis passionnée de poterie.
+            J'ai acquis beaucoup de connaissances et je souhaitais les partager .
+            Grâce à Talent Connect, j’ai pu enseigner mon activité à de nombreux apprentis avec lesquelles
+            je me suis liée d’amitié au fur et à mesure. C’est une expérience unique, 
+            je suis plus que satisfaite!</p>
+            <footer class="card-blockquote">Footer<cite title="Source title">Source title</cite></footer>
+          </blockquote>
+          </div>
+        </div>>
+      </div>
+
     <!-- Jumbotron --->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
