--- a/app/views/layouts/_landing-testimonials.html.erb
+++ b/app/views/layouts/_landing-testimonials.html.erb
@@ -41,22 +41,24 @@
     </div>
     <div class="col-4">
       <div class="card card-custom3 py-4 px-5 max-width-28">
-      <div class="text-center">
-        <div class="avatar-big m-auto">
-          <%= image_tag("talent_pottery1.jpg", class: "avatar-img rounded-circle") %>
+        <div class="text-center">
+          <div class="avatar-big m-auto">
+            <%= image_tag("talent_pottery1.jpg", class: "avatar-img rounded-circle") %>
+          </div>
+            <h5 class="mt-3">Julia</h5> 
+            <div class="lead pb-4">
+              Mentor chez Talent Connect
+            </div>
+            <div>
+              <blockquote><em>
+                Passionnée de poterie,grâce à Talent Connect, 
+                j’ai pu enseigner mon activité à de nombreux apprentis.<br><br>C’est une expérience unique, 
+                je suis plus que satisfaite!
+              </em></blockquote>
+            </div>
+          </div>
         </div>
-          <h5 class="mt-3">Julia</h5> 
-          <div class="lead pb-4">
-            Mentor chez Talent Connect
-          </div>
-          <div>
-            <blockquote><em>
-              Passionnée de poterie,grâce à Talent Connect, 
-              j’ai pu enseigner mon activité à de nombreux apprentis.<br><br>C’est une expérience unique, 
-              je suis plus que satisfaite!
-            </em></blockquote>
-          </div>
       </div>
     </div>
   </div>
-</div>
+</div><br><br>
