duration hour only talent show + partial form edit talent for user/admin edit talent + adjusts home/Contact + add aucune if no category on talentshow

--- a/app/views/talents/_show_talent.html.erb
+++ b/app/views/talents/_show_talent.html.erb
@@ -78,8 +78,13 @@
           </tr>
           <tr>
             <th scope="col">Catégorie :</th>
-            <td><% @talent.categories.each do |category| %>
-                <%= category.title %><br>
+            <td>
+              <% if @talent.categories.any? %>
+                <% @talent.categories.each do |category| %>
+                  <%= category.title %><br>
+                <% end %>
+              <% else %>
+                Aucune
               <% end %>
             </td>
           </tr>
