--- a/app/views/talents/index.html.erb
+++ b/app/views/talents/index.html.erb
@@ -1,5 +1,7 @@
 <div class="container mt-5">
-  <%= render partial: 'layouts/searchform', locals: {keyword: params[:search_keywords]} %>
+  <div class="fancy-navbar mr-4">
+    <%= render partial: 'layouts/search-three-part'%><br>
+  </div>
   <br>
   <div class="row">
     <div class="col">
