--- a/app/views/layouts/_box-search-result.html.erb
+++ b/app/views/layouts/_box-search-result.html.erb
@@ -9,7 +9,7 @@
             <% end %>
         <% else %>
             <% if params[:search_keywords].length == 0 %>
-                Saisi au moins 4 caractère dans la recherche.
+                Saisis au moins 4 caractère dans la recherche.
             <% else %>
                 Aucun résultat pour "<%= params[:search_keywords] %>"
                 <% if params[:search_keywords].length < 4 %>
