--- a/app/views/layouts/_landing-testimonials.html.erb
+++ b/app/views/layouts/_landing-testimonials.html.erb
@@ -14,7 +14,7 @@
             </div>
             <div>
               <blockquote><em>
-                J'ai toujours été maladroit mais grace à Julia, j'ai pu réaliser de magnifiques poteries!<br><br>Grâce à Talent Connect, je me suis dépassée!
+                J'ai toujours été maladroit mais grâce à Julia, j'ai pu réaliser de magnifiques poteries!<br><br>Grâce à Talent Connect, je me suis dépassée!
               </em></blockquote>
             </div>
         </div>
@@ -32,7 +32,7 @@
             </div>
             <div>
               <blockquote><em>
-                J’ai pu enseigner la randonnée à de nombreux apprentis réellement passionés, c'est agréable. Merci Talent Connect!
+                J’ai pu enseigner la randonnée à de nombreux apprentis réellement passionnés, c'est agréable. Merci Talent Connect!
                 <br><br>Talent Connect, c'est de superbes rencontres!
               </em></blockquote>
             </div>
@@ -51,7 +51,7 @@
             </div>
             <div>
               <blockquote><em>
-                Passionnée de poterie,grâce à Talent Connect, 
+                Passionnée de poterie, grâce à Talent Connect, 
                 j’ai pu enseigner mon activité à de nombreux apprentis.<br><br>C’est une expérience unique, 
                 je suis plus que satisfaite!
               </em></blockquote>
