--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,13 +5,13 @@
 <h1>Notre équipe</h1>
 <br>
 
-<!-- about page cards -->
+<!-- ABOUT PAGE CARDS -->
 <div class="container">
 <div class = "row d-flex justify-content-center">
   
   <div class="card card-custom shadow m-4 text-center max-width-18">
     <div class="card-img-container">
-    <%= image_tag("static_about1.jpg", alt: "picture", class: "img card-img-top") %>
+    <%= image_tag("static_about1.jpg", alt: "photo", class: "img card-img-top") %>
     </div>
     <div class="card-body">
       <h6 class="card-title">Diane DECOURT</h5>
@@ -21,7 +21,7 @@
 
   <div class="card card-custom shadow m-4 text-center max-width-18">
     <div class="card-img-container">
-    <%= image_tag("static_about2.jpg", alt: "picture", class: "img card-img-top") %>
+    <%= image_tag("static_about2.jpg", alt: "photo", class: "img card-img-top") %>
     </div>
     <div class="card-body">
       <h6 class="card-title">Mehdi Lucas AMMAR</h5>
@@ -31,7 +31,7 @@
 
   <div class="card card-custom shadow m-4 text-center max-width-18">
       <div class="card-img-container">
-     <%= image_tag("static_about3.jpg", alt: "picture", class: "img card-img-top") %>
+     <%= image_tag("static_about3.jpg", alt: "photo", class: "img card-img-top") %>
       </div>
     <div class="card-body">
       <h6 class="card-title">Patrice HUSZEZO</h6>
@@ -41,7 +41,7 @@
 
   <div class="card card-custom shadow m-4 text-center max-width-18">
     <div class="card-img-container">
-    <%= image_tag("static_about3.jpg", alt: "picture", class: "img card-img-top") %>
+    <%= image_tag("static_about3.jpg", alt: "photo", class: "img card-img-top") %>
     </div>
     <div class="card-body">
       <h6 class="card-title">Rémi BARNAT</h6>
@@ -51,7 +51,7 @@
 
    <div class="card card-custom shadow m-4 text-center max-width-18">
     <div class="card-img-container">
-    <%= image_tag("static_about1.jpg", alt: "picture", class: "img card-img-top") %>
+    <%= image_tag("static_about1.jpg", alt: "photo", class: "img card-img-top") %>
     </div>
     <div class="card-body">
       <h6 class="card-title">Yohan FLEURY</h6>
@@ -67,7 +67,7 @@
 <br>
 <br>
 
-<!-- footer with site map -->
+<!-- FOOTER WITH SITE MAP -->
 <footer class="pb-4 bg-primary-3" id="about-footer">
   <div class="container">
     <div class="row mb-5">
