--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -8,7 +8,7 @@
       <p class="m-4">Envoie nous tes coordonnées, et l'un des super équipiers de TalentConnect se fera un plaisir de te recontacter.
       </p>
 
-      <!--contact form-->
+      <!-- CONTACT FORM -->
       <form class="contact-form m-4">
         <div class="form-row">
           <div class="form-group col-md-6 pr-4">
@@ -40,7 +40,7 @@
         <br>
       </form>
 
-      <!--alternative contact via email-->
+      <!-- ALTERNATIVE CONTACT VIA EMAIL -->
       <hr>
       <div class="contact-direct-email" display="flex" flex-flow="row wrap">
         <p class="m-4">Ou si tu préfères la méthode classique d'envoi d'un e-mail, clique sur le lien ci-après pour nous contacter : 
