--- a/app/views/static_pages/kit_ui.html.erb
+++ b/app/views/static_pages/kit_ui.html.erb
@@ -454,7 +454,7 @@
     <br><br>
     <!-- FORMS -->
     <div>
-      <!--login basic form exemple-->
+      <!--login basic form example-->
       <form class="max-width-45">
         <div class="form-group">
           <label for="exampleInputEmail1">Email</label>
@@ -479,7 +479,7 @@
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div><br>
 
-      <!--select basic form exemple-->
+      <!--select basic form example-->
       <form>
         <div class="form-group max-width-18">
           <label for="exampleFormControlSelect1">Catégorie</label>
@@ -495,7 +495,7 @@
 
       <br><br>
 
-      <!--another select basic form exemple-->
+      <!--another select basic form example-->
       <form>
         <div class="form-group max-width-18">
         <label for="exampleFormControlSelect1">Catégorie</label>
@@ -508,13 +508,13 @@
         </div>
       </form><br><br>
 
-      <!--form exemple edit talent -->
+      <!--form example edit talent -->
 
       
       <br><br><hr><br><br>
     </div>
 
-    <!--form exemple edit talent -->
+    <!--form example edit talent -->
     <h2>Page show</h2><br><br>
 
     <div class="container">
@@ -547,7 +547,7 @@
       </div>
     </div>
 
-    <!--- Profil card -->
+    <!--- Profile card -->
   <hr>
     <h3>Mon profil</h3>
     <div class="container">
