--- a/app/views/talents/_edit_talent_form.html.erb
+++ b/app/views/talents/_edit_talent_form.html.erb
@@ -4,18 +4,18 @@
 <div class="container">
   <div class=" card card-custom2 shadow max-width-45 p-4 m-auto">
     <div class="p-2">
-      <h4 class="text-primary text-center"><u>Bienvenue sur la page de modification de votre talent :</u></h4>
+      <h4 class="text-primary text-center"><u>Bienvenue sur la page de modification de ton talent :</u></h4>
       <h4 class="text-center"> <%=@talent.title%></h4><br>
     </div>
     <%= form_with model: @talent, local: true, multipart: true, method: :patch do |form| %>
 
-      <!-- title -->
+      <!-- TITLE -->
       <div class="field">
         <%= form.label :title, 'Titre' %>
         <%= form.text_field :title, class: "form-control" %>
       </div>
 
-      <!-- Description -->
+      <!-- DESCRIPTION -->
       <div class="field">
         <%= form.label :description, 'Description' %>
         <%= form.text_area :description, class: "form-control" %>
@@ -86,11 +86,11 @@
       </div>
 
       <hr>
-      <!-- Photos -->
+      <!-- Picture -->
 
       <h3>Photo actuelle</h3>
       <%if @talent.picture.attached?%>
-        <%= image_tag @talent.picture, alt: 'picture', class: 'max-width-45 card-img' %>
+        <%= image_tag @talent.picture, alt: 'Photo', class: 'max-width-45 card-img' %>
       <%else%>
         <p>=== Il n'y a pas encore de photo liée à ce talent ===</p>
       <%end%>
