--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -19,10 +19,11 @@
               <span class="input-group-text"> <i class="fas fa-at"></i> </span>
             </div>
             <%= f.email_field :email, autofocus: true, class:"form-control", placeholder: "Adresse email", autocomplete: "e-mail", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-          </div> <!-- form-group// -->
+          </div>
 
           <!-- MESSAGE EXPLICATIF -->
           <small><i class="">Envoie un email avec les instructions de confirmation.</i></small>
+          
           <!-- VALIDATION BUTTON -->
           <div class="actions">
             <%= f.submit "Renvoyer les informations de confirmation", class: "btn btn-primary mb-3" %>
