--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <p class="">Compte bloqué ? <%= link_to "Renvoyer les instruction de déblocage", new_unlock_path(resource_name) %><br /> </p>
+  <p class="">Compte bloqué ? <%= link_to "Renvoyer les instructions de déblocage", new_unlock_path(resource_name) %><br /> </p>
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
