--- a/app/views/layouts/_landing-mentor.html.erb
+++ b/app/views/layouts/_landing-mentor.html.erb
@@ -3,7 +3,7 @@
   <h4 class="text-primary text-center">...ou transmets la tienne en devenant mentor!</h4>
 
   <div class="text-center m-4">
-    <p>Toi aussi, rejoints Talent Connect et enseigne à de supers apprentis</p>
+    <p>Toi aussi, rejoins Talent Connect et enseigne à de supers apprentis</p>
     <%= button_to 'Je deviens mentor et propose une activité', new_talent_path(), method: :get, class: "btn btn-danger " %>
   </div><br>
 </div>
