--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -27,7 +27,7 @@
   <% else %>
     <div class="alert alert-dismissible alert-secondary mb-0">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <p class="mb-0">Ce type de message n'est pas paramétré type : <% type %></p>
+      <p class="mb-0">Ce type de message n'est pas paramétré : <% type %></p>
     </div>
   <% end %>
 <% end %>
