--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,7 +23,7 @@
               [T]
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <!-- KIT UI -->
+              <!-- UI KIT -->
               <a a class="dropdown-item" href="<%= static_pages_kit_ui_path %>">KIT UI</a>
               
               <hr>
