--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render 'layouts/navbar' %>
 
     <!--<div class="container">-->
-      <!-- USERS MESSAGES -->
+      <!-- USER MESSAGES -->
       <%= render 'layouts/messages' %>  
 
       <!-- PAGE CONTENT -->
