--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -5,16 +5,16 @@
 
         <%= form_with model: @review, url: talent_appointment_reviews_path, local: true, multipart: true do |form| %>
 
-          <!-- Mark -->
+          <!-- MARK -->
           <div class="field">
             <%= form.label :mark, 'Note' %>
             <%= form.select :mark, options_for_select(1..5), { }, {class: "custom-select custom-select mb-3"} %>
           </div>
 
-          <!-- Comment -->
+          <!-- COMMENT -->
           <div class="field">
             <%= form.label :comment, 'Commentaire' %>
-            <%= form.text_area :comment, class: "form-control", placeholder: "Commentaire (500 caractères maximum)." %>
+            <%= form.text_area :comment, class: "form-control", placeholder: "Commentaire (500 caractères maximum)" %>
           </div>
 
            <div class="actions text-center p-3">
