--- a/app/views/talents/_new_talent_form.html.erb
+++ b/app/views/talents/_new_talent_form.html.erb
@@ -9,13 +9,13 @@
     </div>
     <%= form_with model: @talent, local: true, multipart: true do |form| %>
 
-      <!-- title -->
+      <!-- TITLE -->
       <div class="field">
         <%= form.label :title, 'Titre' %>
         <%= form.text_field :title, class: "form-control", placeholder: "L'intitulé de ton talent. (140 caractères maximum)." %>
       </div>
 
-      <!-- Description -->
+      <!-- DESCRIPTION -->
       <div class="field">
         <%= form.label :description, 'Description' %>
         <%= form.text_area :description, class: "form-control", placeholder: "Décris ton talent. (1000 caractères maximum)." %>
@@ -84,7 +84,7 @@
       </div>
 
       <hr>
-      <!-- Photos -->
+      <!-- Picture -->
       <div class="actions text-center p-3">
         <label>Photo</label>
         <br>
