--- a/app/views/talents/_edit_talent_form.html.erb
+++ b/app/views/talents/_edit_talent_form.html.erb
@@ -25,21 +25,21 @@
 
       <div class="row">
         <div class="col">
-          <!-- Price -->
+          <!-- PRICE -->
           <div class="field">
             <%= form.label :price, 'Prix en euros' %>
             <%= form.number_field :price, min: 1, value: 10, class: "form-control" %>
           </div>
         </div>
         <div class="col">
-          <!-- Duration -->
+          <!-- DURATION -->
           <div class="field">
             <%= form.label :duration, 'Durée en heure' %>
             <%= form.select :duration, options_for_select((1..8).step(1).map{ |n| n % 1 == 0 ? n.to_i : n }, 1), { }, {class: "custom-select custom-select mb-3"} %>
           </div>
         </div>
         <div class="col">
-          <!-- Category nested form -->
+          <!-- CATEGORY NESTED FORM -->
           <div class="field">
             <%= fields_for :JoinTableTalentCategory do |category_form| %>
                 <%= category_form.label :category_id, 'Catégorie' %>
@@ -49,10 +49,8 @@
         </div>
       </div>
 
-
-
       <hr>
-      <!-- Place nested form -->
+      <!-- PLACE NESTED FORM -->
       <div class="field">
         <%= fields_for :place do |place_form| %>
             <%= place_form.label :address, 'Adresse' %>
@@ -67,7 +65,6 @@
         <% end %>
       </div>
 
-      
       <div class="field">
         <%= fields_for :place do |place_form| %>
             <%= place_form.label :zip_code, 'Code postal' %>
@@ -88,8 +85,7 @@
       </div>
 
       <hr>
-      <!-- Picture -->
-
+      <!-- PICTURE -->
       <h3>Photo actuelle</h3>
       <%if @talent.picture.attached?%>
         <%= image_tag @talent.picture, alt: 'Photo', class: 'max-width-45 card-img' %>
