--- a/app/views/admin/talents/index.html.erb
+++ b/app/views/admin/talents/index.html.erb
@@ -9,10 +9,9 @@
     <p>  <strong class="text-primary"> <%= @categories.count%></strong class="text-primary"> catégories différentes! </p>
   </div>
 
-
+<h4 class="pb-2 mb-4"> Crée une catégorie ! </h4>
   <%= form_with model: @category, url: admin_categories_path,local: true do |form| %>
       <div class="field">
-        <%= form.label :title, 'Nom' %>
         <%= form.text_field :title, class: "form-control", placeholder: "L'intitulé de ta catégorie" %>
       </div>
       <div class="actions text-center p-3">
