fix redirect if no first_name + secure is_user_both_apprentice_and_mentor? + messages in container

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,16 @@
     <!-- HEADER -->
     <%= render 'layouts/navbar' %>
 
-    <!--<div class="container">-->
-      <!-- USER MESSAGES -->
+    <!-- USER MESSAGES -->
+    <div class="container">
       <%= render 'layouts/messages' %>  
+    </div>
 
-      <!-- PAGE CONTENT -->
-      <%= yield %>
+    <!-- PAGE CONTENT -->
+    <%= yield %>
 
-      <!-- PAGE FOOTER -->
-      <%= render 'layouts/footer' %>
+    <!-- FOOTER -->
+    <%= render 'layouts/footer' %>
 
   </body>
 </html>
