Review button is hidden when appointment is already reviewed

--- a/app/views/layouts/_card-talent.html.erb
+++ b/app/views/layouts/_card-talent.html.erb
@@ -46,7 +46,11 @@
         <% when "past" %>
           <div class="col-md-3 m-auto pr-4 text-center">
             <p class="text-secondary">Séance passée</p>
-            <%= link_to "Évaluer", new_talent_appointment_review_path(model, appointment), class: "btn btn-outline-primary btn-sm m-2" %>
+            <% if appointment.review.nil? %>
+              <%= link_to "Évaluer", new_talent_appointment_review_path(model, appointment), class: "btn btn-outline-primary btn-sm m-2" %>
+            <%else %>
+              <p class="text-secondary">Tu as évalué cette scéance</p>
+            <% end %>
           </div>
         <% when "mentor" %>
           <div class="col-md-3 m-auto pr-4 text-center">
