--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -93,12 +93,20 @@
         <div class="nav-item form-inline my-2 my-lg-0 mr-">
           <%= render partial: 'layouts/searchform-navbar' %>
         </div>
-
+        <!-- NOTIFICATIONS -->
+      <li class="nav-item">
+        <div class="nav-item form-inline my-2 my-lg-0 mr-"> </div>
+      </li>
       <!-- SIGNIN USER BUTTONS -->
       <% if user_signed_in? %>
+          <li class="nav-item form-inline">
+            <span class="mr-1 text-white" title="Evenements en attente d'une action de ta part"><%=count_notifications%></span>
+            <i class="fas fa-bell mr-3 text-white" title="Evenements en attente d'une action de ta part" ></i>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle btn btn-outline-light " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag("user_default.jpg", class: "avatar-img rounded-circle max-width-1") %>
+              <%= image_tag(current_user.avatar, class: "avatar-img rounded-circle max-width-1") %>
               Mon espace
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
