--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -100,8 +100,8 @@
       <!-- SIGNIN USER BUTTONS -->
       <% if user_signed_in? %>
           <li class="nav-item form-inline">
-            <span class="mr-1 text-white" title="Evenements en attente d'une action de ta part"><%=count_notifications%></span>
-            <i class="fas fa-bell mr-3 text-white" title="Evenements en attente d'une action de ta part" ></i>
+            <span class="mr-1 text-white" title="Événements en attente d'une action de ta part"><%=count_notifications%></span>
+            <i class="fas fa-bell mr-3 text-white" title="Événements en attente d'une action de ta part" ></i>
           </li>
 
           <li class="nav-item dropdown">
