messages on the whole screen on landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,13 @@
     <%= render 'layouts/navbar' %>
 
     <!-- USER MESSAGES -->
-    <div class="container">
-      <%= render 'layouts/messages' %>  
-    </div>
+    <% if current_page?(root_path) %>
+      <%= render 'layouts/messages' %>
+    <% else %>
+      <div class="container">
+        <%= render 'layouts/messages' %>  
+      </div>
+    <% end %>
 
     <!-- PAGE CONTENT -->
     <%= yield %>
