--- a/app/views/admins/talents/index.html.erb
+++ b/app/views/admins/talents/index.html.erb
@@ -3,18 +3,14 @@
   <h3 class="text-primary text-center p-3 m-2"> Dashboard administrateur</h1>
   <div class="card card-custom2 shadow p-4 m-5 w-50 mx-auto">
     <h4 class="pb-2 mb-4"> Actuellement il y a : </h4>
-<<<<<<< HEAD
     <p>  <strong class="text-primary"> <%= @users.count%></strong class="text-primary"> utilisateurs inscrits sur notre site !</p>
-=======
-    <p> <strong class="text-primary">  <%= @users.count%></strong class="text-primary"> utilisateurs inscrits sur notre site!</p>
->>>>>>> development
-    <p>  <strong class="text-primary"> <%= @appointments.count%></strong class="text-primary"> RDV pris entre mentors et apprentis! </p>
-    <p>  <strong class="text-primary"> <%= @talents.count%></strong class="text-primary"> talents proposés par des mentors! </p>
-    <p>  <strong class="text-primary"> <%= @categories.count%></strong class="text-primary"> catégories différentes! </p>
+    <p>  <strong class="text-primary"> <%= @appointments.count%></strong class="text-primary"> RDV pris entre mentors et apprentis !</p>
+    <p>  <strong class="text-primary"> <%= @talents.count%></strong class="text-primary"> talents proposés par des mentors !</p>
+    <p>  <strong class="text-primary"> <%= @categories.count%></strong class="text-primary"> catégories différentes !</p>
   </div>
 
 <h4 class="pb-2 mb-4"> Crée une catégorie ! </h4>
-  <%= form_with model: @category, url: admin_categories_path,local: true do |form| %>
+  <%= form_with model: @category, url: admins_categories_path,local: true do |form| %>
       <div class="field">
         <%= form.text_field :title, class: "form-control", placeholder: "L'intitulé de ta catégorie" %>
       </div>
@@ -30,7 +26,7 @@
     <h4 class="pb-2 mb-4"> <u> Liste des catégories : </u></h4>
     <% @categories.each do |category| %>
     <p> <%= category.title%>
-    <%= link_to "Supprimer", admin_category_path(id: category.id), method: "delete", remote: true, class: "btn btn-outline-danger btn-sm m-2  float-right" %> </p>
+    <%= link_to "Supprimer", admins_category_path(id: category.id), method: "delete", remote: true, class: "btn btn-outline-danger btn-sm m-2  float-right" %> </p>
     <% end%>
   </div>
 </div>
