--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <!-- UI KIT -->
-              <a a class="dropdown-item" href="<%= static_pages_ui_kit_path %>">KIT UI</a>
+              <a a class="dropdown-item" href="<%= ui_kit_path %>">KIT UI</a>
               
               <hr>
               <!-- TALENTS -->
@@ -117,7 +117,7 @@
               <a href="<%= mentor_show_user_path(current_user.id) %>" class="dropdown-item link-green">Mon espace mentor</a>
               <div class="dropdown-divider"></div>
               <% if is_current_user_admin? %>
-                <a href="<%= admin_talents_path%>" class="dropdown-item link-green">Mon espace ADMIN</a>
+                <a href="<%= admin_path%>" class="dropdown-item link-green">Mon espace ADMIN</a>
                 <div class="dropdown-divider"></div>
               <%end%>
               <a href="<%= destroy_user_session_path(session[:user_id]) %>" data-confirm="Es-tu sûr de vouloir te déconnecter ?" data-method="DELETE" class="dropdown-item link-green">Déconnexion</a>
